gitops/components/argocd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: argocd-server-ingress
  namespace: argocd
  labels:
    run: argocd-server
spec:
  rules:
    - host: argocd.<AWS_HOSTED_ZONE_NAME>
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
            path: /
  tls:
    - hosts:
        - argocd.<AWS_HOSTED_ZONE_NAME>
      secretName: argocd-secret
